fix header nav elements order for removing massive gap

--- a/src/styles/scss/components/_header.scss
+++ b/src/styles/scss/components/_header.scss
@@ -1,6 +1,12 @@
 @use "../abstracts" as *;
 
 header {
+  h5:nth-child(2),
+  h5:nth-child(3),
+  h5:nth-child(4){
+    order: -1;
+  }
+
   .nav-menu {
     display: none;
   }
