--- a/styles.css
+++ b/styles.css
@@ -3886,6 +3886,11 @@ header {
   top: 0;
   z-index: 99999;
 }
+header h5:nth-child(2),
+header h5:nth-child(3),
+header h5:nth-child(4) {
+  order: -1;
+}
 header .nav-menu {
   display: none;
 }
